added the first project link and made the div clickable

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
         <div class= "placeholders">
             
-            <div id="large-square">
+            <a href= "https://vruss14.github.io/marketing-agency-code-refactor/" target="_blank"><div id="large-square">
                 <div class= "square-title">
                     <h2>Code Refactor</h2>
                     <p>Project made with HTML and CSS</p>
                 </div>
-            </div>
+            </div></a>
 
             <div class="square">
                 <div class= "square-title">
