removed project link due to unwanted effects on flexbox

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <h2>Completed Projects</h2>
 
         <div class= "placeholders">
-            
-            <a href= "https://vruss14.github.io/marketing-agency-code-refactor/" target="_blank"><div id="large-square">
-                <div class= "square-title">
-                    <h2>Code Refactor</h2>
-                    <p>Project made with HTML and CSS</p>
+
+                <div id="large-square">
+                    <div class= "square-title">
+                        <h2>Code Refactor</h2>
+                        <p>Project made with HTML and CSS</p>
+                    </div>
                 </div>
-            </div></a>
 
             <div class="square">
                 <div class= "square-title">
