resolved link issue with new CSS

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         <h2>Completed Projects</h2>
 
         <div class= "placeholders">
-
+            
                 <div id="large-square">
+                    <a href= "https://vruss14.github.io/marketing-agency-code-refactor/" target="_blank"></a>
                     <div class= "square-title">
                         <h2>Code Refactor</h2>
                         <p>Project made with HTML and CSS</p>
