revised to include semantic HTML and consolidated CSS a bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="content">
+    <section class="content">
 
     <header>
         <h1>Valerie Russell's Portfolio</h1>
@@ -24,9 +24,9 @@
 
         <section id="about-me">
         
-        <div class="image-wrapper">
-        <img id="portfolio-img" src ="images/portfolio-profile-square.jpeg">
-        </div>
+        <figure class="image-wrapper">
+        <img id="portfolio-img" src ="images/portfolio-profile-square.jpeg" alt= "Photo of Valerie">
+        </figure>
 
         <h2>About Me</h2>
 
@@ -46,83 +46,83 @@
 
         <h2>Completed Projects</h2>
 
-        <div class= "placeholders">
+        <figure class= "project-images">
             
-                <div id="large-square">
+                <figure id="large-square">
                     <a href= "https://vruss14.github.io/marketing-agency-code-refactor/" target="_blank"></a>
-                    <div class= "square-title">
+                    <figure class= "square-title">
                         <h2>Code Refactor</h2>
-                        <p>Project made with HTML and CSS</p>
-                    </div>
-                </div>
+                        <p>HTML/CSS</p>
+                    </figure>
+                </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-            <div class="square">
-                <div class= "square-title">
+            <figure class="square">
+                <figure class= "square-title">
                     <p>Project coming soon!</p>
-                </div>
-            </div>
+                </figure>
+            </figure>
 
-        </div>
+        </figure>
 
         </section>
 
@@ -133,6 +133,7 @@
         <a href= "https://github.com/vruss14" target="_blank"><p>GitHub: vruss14</p></a>
     </footer>
 
-    </div>
+    </section>
+
 </body>
 </html>
