added resume link and social media icons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#about-me">About Me</a>
             <a href="#completed-projects">Completed Projects</a>
             <a href="#contact-info">Contact Information</a>
+            <a href="valerie-russell-technical-resume-pdf.pdf" target = "_blank">Resumé PDF</a>
         </nav>
     </header>
 
@@ -66,7 +67,7 @@
                     </figure>
                 </figure>
 
-            <figure class="square" id = "coding-quiz">
+            <figure class="square project" id = "coding-quiz">
                 <a href= "https://vruss14.github.io/coding-quiz/" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Coding Quiz</h2>
@@ -75,7 +76,7 @@
                 </figure>
             </figure>
 
-            <figure class="square" id = "word-guess">
+            <figure class="square project" id = "word-guess">
                 <a href= "https://vruss14.github.io/word-guess" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Word Guess</h2>
@@ -84,7 +85,7 @@
                 </figure>
             </figure>
 
-            <figure class="square" id = "code-snippets">
+            <figure class="square project" id = "code-snippets">
                 <a href= "https://vruss14.github.io/access-code-snippets" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Code Snippets</h2>
@@ -93,9 +94,9 @@
                 </figure>
             </figure>
 
-            <figure class="square" id = "weather-dashboard">
+            <figure class="square project" id = "weather-dashboard">
                 <a href= "https://vruss14.github.io/weather-forecast-dashboard/" target="_blank"></a>
-                <figure class= "square-title">
+                <figure class= "square-title" id = "resize-title">
                     <h2>Weather Dashboard</h2>
                     <p>HTML/CSS/JavaScript</p>
                     <a href = "https://github.com/vruss14/weather-forecast-dashboard" target = "_blank"><button class = "repo-btn">View Code</button></a>
@@ -152,7 +153,8 @@
 
     <footer id="contact-info">
         <p>Email: vruss14@gmail.com</p>
-        <a href= "https://github.com/vruss14" target="_blank"><p>GitHub: vruss14</p></a>
+        <a href= "https://github.com/vruss14" target="_blank"><img src = "images/GitHub-Mark-64px.png"></a>
+        <a href= "https://www.linkedin.com/in/valerie-russell-732731162" target="_blank"><img src = "images/LI-In-Bug copy.png"></a>
     </footer>
 
     </section>
