updated contact info on portfolio and resume

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
     <footer id="contact-info">
         <p>Email: vruss14@gmail.com</p>
+        <p>Phone: ‪(313) 241-0774</p>
         <a href= "https://github.com/vruss14" target="_blank"><img src = "images/GitHub-Mark-64px.png"></a>
         <a href= "https://www.linkedin.com/in/valerie-russell-732731162" target="_blank"><img src = "images/LI-In-Bug copy.png"></a>
     </footer>
