added project descriptions and adjusted CSS accordingly

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 
         <figure class= "project-images">
             
-                <figure id="large-square">
+                <figure class = "adjust-first" id="large-square">
                     <a href= "https://ellisaissa.github.io/super-duper-octo-fiesta/" target="_blank"></a>
                     <figure class= "square-title">
                         <h2>DinGen</h2>
-                        <p>HTML/CSS/JavaScript</p>
+                        <p>Helps users discover new recipe ideas through two third-party APIs.</p>
+                        <p>Created with HTML/CSS/JavaScript</p>
                         <a href = "https://github.com/ellisaissa/super-duper-octo-fiesta" target = "_blank"><button class = "repo-btn">View Code</button></a>
                     </figure>
                 </figure>
@@ -71,7 +72,8 @@
                 <a href= "https://vruss14.github.io/coding-quiz/" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Coding Quiz</h2>
-                    <p>HTML/CSS/JavaScript</p>
+                    <p>Gives developers an opportunity to assess their skills and progress.</p>
+                    <p>Created with HTML/CSS/JavaScript</p>
                     <a href = "https://github.com/vruss14/coding-quiz" target = "_blank"><button class = "repo-btn">View Code</button></a>
                 </figure>
             </figure>
@@ -80,7 +82,8 @@
                 <a href= "https://vruss14.github.io/word-guess" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Word Guess</h2>
-                    <p>HTML/CSS/JavaScript</p>
+                    <p>Game that gives users the chance to guess programming-related words.</p>
+                    <p>Created with HTML/CSS/JavaScript</p>
                     <a href = "https://github.com/vruss14/word-guess" target = "_blank"><button class = "repo-btn">View Code</button></a>
                 </figure>
             </figure>
@@ -89,7 +92,8 @@
                 <a href= "https://vruss14.github.io/access-code-snippets" target="_blank"></a>
                 <figure class= "square-title">
                     <h2>Code Snippets</h2>
-                    <p>HTML/CSS</p>
+                    <p>Quick references to proper CSS syntax that can be used as needed.</p>
+                    <p>Created with HTML/CSS</p>
                     <a href = "https://github.com/vruss14/access-code-snippets" target = "_blank"><button class = "repo-btn">View Code</button></a>
                 </figure>
             </figure>
@@ -98,7 +102,8 @@
                 <a href= "https://vruss14.github.io/weather-forecast-dashboard/" target="_blank"></a>
                 <figure class= "square-title" id = "resize-title">
                     <h2>Weather Dashboard</h2>
-                    <p>HTML/CSS/JavaScript</p>
+                    <p>Provides current and five-day weather forecasts local to the user.</p>
+                    <p>Created with HTML/CSS/JavaScript</p>
                     <a href = "https://github.com/vruss14/weather-forecast-dashboard" target = "_blank"><button class = "repo-btn">View Code</button></a>
                 </figure>
             </figure>
