updated about me information

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
             <h2>About Me</h2>
 
-            <p> Front-end web developer with a bachelor’s of science in human biology, 
+            <p> Full-stack web developer with a bachelor’s of science in human biology, 
                 along with professional experiences in neuroscience research, copyediting, 
                 and crisis resolution. Strong interest in using logical reasoning, a detail-oriented mindset, 
                 and a calm demeanor to solve problems effectively. </p><br>
                 
             <p> Currently working towards a certification in full-stack web development, 
-                through which I am obtaining proficiency in HTML, CSS, and JavaScript, among other technologies. 
+                through which I am obtaining proficiency in HTML, CSS, and JavaScript, and the MERN stack. 
                 Because of my experiences as an editor, I have a particular passion for debugging and refactoring code to 
                 produce deliverables that are both fully functional and easy to maintain.</p><br>
                 
