updated project descriptions

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <img class="card-img-top" src="images/screenshots/space-e-screenshot.png" alt="Space-E home page">
                 <div class="card-body text-center">
                   <h3 class="card-title display-4">Space-E</h5>
-                  <p class="card-text">RESTful API that fetches space-related data from several public, third-party APIs to help users learn about space-related topics and upcoming events.</p>
+                  <p class="card-text">RESTful API that fetches space-related data from several public third-party APIs to help users learn about space-related topics and upcoming events.</p>
                   <a href="https://space-e.herokuapp.com/" target= "_blank" class="btn btn-primary mb-3 ml-3 mr-3 custom-size custom-btn">Deployed Website</a>
                   <a href="https://github.com/bborumoore/space-e" target= "_blank" class="btn btn-primary mb-3 ml-3 mr-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
@@ -123,7 +123,7 @@
                 <img class="card-img-top" src="images/screenshots/dingen-screenshot.png" alt="DinGen homepage">
                 <div class="card-body text-center">
                   <h5 class="card-title display-4">DinGen</h5>
-                  <p class="card-text">JavaScript-based dinner generator that leverages data from two public, third-party APIs to help users plan meals and find new recipes.</p>
+                  <p class="card-text">JavaScript-based dinner generator that leverages data from two public third-party APIs to help users plan meals and find new recipes.</p>
                   <a href="https://ellisaissa.github.io/DinGen-Web/" target= "_blank" class="btn btn-primary mb-3 ml-3 mr-3 custom-size custom-btn">Deployed Website</a>
                   <a href="https://github.com/ellisaissa/DinGen-Web" target= "_blank" class="btn btn-primary mb-3 ml-3 mr-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
