--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="./images/icons/code-pngrepo-com.png"/>
+
     <!-- Custom CSS -->
     <link rel= "stylesheet" type= "text/css" href= "style.css" />
 </head>
