add new project imgs & info

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
 
         <div class = "custom-wrapper">
             <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
+              <img class="card-img-top" src="images/screenshots/original/wallpro-screenshot.png" alt="WallPro home page">
+              <div class="card-body text-center">
+                <h3 class="card-title display-4">WallPro</h3>
+                <p class="card-text">Business to business solution that expedites the process of ordering vinyl installation materials.</p>
+                <a href="http://www.wallpro.net/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
+                <a href="https://github.com/mbussert/shaw-ppc" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+              </div>
+          </div>
+
+            <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
                 <img class="card-img-top" src="images/screenshots/resized/debugged-screenshot-resized.png" alt="Debugged and Deconstructed home page">
                 <div class="card-body text-center">
                   <h3 class="card-title display-4">Debugged & Deconstructed</h3>
@@ -119,43 +129,53 @@
                   <a href="https://debugged-and-deconstructed.herokuapp.com/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
                   <a href="https://github.com/vruss14/web-development-blog" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
-              </div>
-    
-            <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
-                <img class="card-img-top" src="images/screenshots/resized/space-e-screenshot-resized.png" alt="Space-E home page">
-                <div class="card-body text-center">
-                  <h3 class="card-title display-4">Space-E</h3>
-                  <p class="card-text">RESTful API that fetches space-related data from several public third-party APIs to help users learn about space-related topics and upcoming events.</p>
-                  <a href="https://space-e.herokuapp.com/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
-                  <a href="https://github.com/bborumoore/space-e" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
-                </div>
             </div>
-
+  
         </div>
-
 
         <h3 class = "display-3 text-center mt-5 mb-5" id = "front-end-apps">Front-End Applications</h3>
 
         <div class = "custom-wrapper">
+
             <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
-                <img class="card-img-top" src="images/screenshots/resized/dingen-screenshot-resized.png" alt="DinGen homepage">
+                <img class="card-img-top" src="images/screenshots/original/quote-generator-screenshot.png" alt="Quote Generator homepage">
                 <div class="card-body text-center">
-                  <h3 class="card-title display-4">DinGen</h3>
-                  <p class="card-text">JavaScript-based dinner generator that leverages data from two public third-party APIs to help users plan meals and find new recipes.</p>
-                  <a href="https://ellisaissa.github.io/DinGen-Web/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
-                  <a href="https://github.com/ellisaissa/DinGen-Web" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+                  <h3 class="card-title display-4">Quote Generator</h3>
+                  <p class="card-text">Simple UI that displays random inspirational quotes. Built with React.</p>
+                  <a href="https://vruss14.github.io/quote-generator/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
+                  <a href="https://github.com/vruss14/quote-generator" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
               </div>
     
             <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
-                <img class="card-img-top" src="images/screenshots/resized/coding-quiz-screenshot-resized.png" alt="Coding Quiz homepage">
+                <img class="card-img-top" src="images/screenshots/original/markdown-previewer-screenshot.png" alt="Markdown Previewer homepage">
                 <div class="card-body text-center">
-                  <h3 class="card-title display-4">Coding Quiz</h3>
-                  <p class="card-text">Tests junior developers on their front-end web development knowledge, and stores high scores locally.</p>
-                  <a href="https://vruss14.github.io/coding-quiz/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
-                  <a href="https://github.com/vruss14/coding-quiz" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+                  <h3 class="card-title display-4">Markdown Previewer</h3>
+                  <p class="card-text">Dynamically parses markdown into HTML on screen.</p>
+                  <a href="https://vruss14.github.io/preview-markdown/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
+                  <a href="https://github.com/vruss14/preview-markdown" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
             </div>
+
+            <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
+              <img class="card-img-top" src="images/screenshots/original/palindromes-screenshot.png" alt="Palindrome Checker homepage">
+              <div class="card-body text-center">
+                <h3 class="card-title display-4">Palindrome Checker</h3>
+                <p class="card-text">Determines whether a given user input is a palindrome. Built with SASS and React.</p>
+                <a href="https://vruss14.github.io/palindromes/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
+                <a href="https://github.com/vruss14/palindromes" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+              </div>
+          </div>
+
+          <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
+            <img class="card-img-top" src="images/screenshots/original/sketchifypro-screenshot.png" alt="Sketch Pad homepage">
+            <div class="card-body text-center">
+              <h3 class="card-title display-4">Sketch Pad</h3>
+              <p class="card-text">Utilizes DOM manipulation and events so that users can sketch a picture on the page.</p>
+              <a href="https://vruss14.github.io/sketch-pad/" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">Deployed Website</a>
+              <a href="https://github.com/vruss14/sketch-pad" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+            </div>
+        </div>
 
         </div>
 
@@ -180,6 +200,24 @@
                   <a href="https://github.com/vruss14/employee-tracker" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
                 </div>
             </div>
+
+            <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
+              <img class="card-img-top" src="images/screenshots/original/fitness-calc-heart-screenshot.png" alt="Command line fitness calculator">
+              <div class="card-body text-center">
+                <h3 class="card-title display-4">Fitness Calculator</h3>
+                <p class="card-text">A CLI solution built with Python for calculating fitness measurements such as body mass index (BMI), estimated protein intake recommendations, and heart rate.</p>
+                <a href="https://github.com/vruss14/fitness-calculator" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+              </div>
+          </div>
+
+          <div class="card mb-5 ml-5 mr-5 custom-card" style="width: 36rem;">
+            <img class="card-img-top" src="images/screenshots/original/html-generator-screenshot.png" alt="Command line HTML generator">
+            <div class="card-body text-center">
+              <h3 class="card-title display-4">HTML Template Generator</h3>
+              <p class="card-text">A CLI solution for generating HTML templates with important meta tags for SEO.</p>
+              <a href="https://github.com/vruss14/HTML-template-generator" target= "_blank" rel = "noopener" class="btn btn-primary mb-3 custom-size custom-btn">GitHub Repository</a>
+            </div>
+        </div>
 
         </div>
 
