--- a/index.html
+++ b/index.html
@@ -73,33 +73,19 @@
               career at Michigan State University. Some of my favorite courses that I took during that time were mechanisms of 
               disease, molecular pathogenesis, physiology, neuroscience of learning, personality psychology, clinical immunology, 
               and virology.</p><br>
-        
-            <p> I loved those courses because I'm the type of person who truly enjoys understanding the components of complex 
-              systems and how those components interact with each other. The implications for that kind of understanding in the 
-              healthcare field are invaluable: remedies can be developed, symptoms can be mitigated, and lives can be saved. 
-              As someone who is equally as empathetic as I am detail oriented, I will always have a love for human health.
-            </p><br>
-        
-            <p> I have worked and volunteered in various roles, including as a behavioral neuroscience research assistant, a crisis 
-              counselor, a hospital volunteer, a transcriptionist, and an editor. Through those opportunities, I have recognized 
-              the importance of combining a thoughtful, scientific approach with empathy. I believe in the power of data and in the 
-              power of compassion, and I have seen the impact of each.
-            </p><br>
 
-            <p> Over the course of 2021, I discovered a new love for web development and computer programming. For me, it incorporates 
+            <p>Over the course of 2021, I discovered a new love for web development and computer programming. For me, it incorporates 
               the best of everything: a scientific, logical approach to problems, a need for discerning and resolving small errors, 
               an opportunity to be creative, and a limitless potential to help those in need.
             </p><br>
 
-            <p> I've spent the past year developing my technical skills as a web developer. I received a certificate in full-stack 
+            <p>I've spent the past year developing my technical skills as a web developer. I received a certificate in full-stack 
               web development from Michigan State University, and I have obtained over 10 other certifications relevant to building 
-              a stellar website with a strong digital presence. I'm seeking opportunities where I can continue to build upon those 
-              skills, and I would especially love to work for a company with a healthcare or scientific focus.
+              a stellar website with a strong digital presence.
             </p><br>
 
-            <p> Below are a few web development projects I have created or worked with a team to create. For additional projects, 
-              feel free to visit my GitHub profile at the bottom of this page. Please also feel free to contact me with any 
-              professional inquiries.
+            <p>Below are a few web development projects I have created or worked with a team to create. For additional projects, 
+              feel free to visit my GitHub profile at the bottom of this page.
             </p><br>
   
         </section>
